# pa_di

./: Cargo.toml  README.md
src/: error.rs  lib.rs  pa_di.rs
src/consts/msg/: en_us.rs
src/error/: initialization.rs
src/impls/: log.rs
src/impls/log/: slog.rs
src/impls/log/slog/: log.rs  stdout.rs
src/traits/: di.rs  logger.rs
